# gswr

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
docs/: pr-titles-guide.md
src/: app.rs  git.rs  main.rs  ui.rs
src/git/: actions.rs  branch.rs  mod.rs
src/git_platforms/: github.rs
src/ui/: footers.rs  mod.rs
