[package]
name = "gswr"
version = "1.2.1"
edition = "2024"
repository = "https://github.com/lethib/gswr"
publish = true

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["std", "clock"] }
crossterm = "0.29.0"
git2 = { version = "0.20.4", default-features = false }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
throbber-widgets-tui = { version = "0.11", default-features = false }
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
